# ChatTable

./: .gitignore  AGENTS.md  CLAUDE.md  INTEGRATION_CHECKLIST.md  MULTI_THREAD_DEVELOPMENT.md  README.md  THREAD_TASK_TEMPLATE.md  package-lock.json
backend/: .env.example  README.md  main.py  migrate_providers.py  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  agents.py  conversations.py  dependencies.py
backend/app/core/: audit.py  autonomous_coordination.py  cache.py  chat_handler.py  config.py  database.py  decision_engine.py  length_control.py  memory_manager.py  redis_client.py  request_context.py  security.py  tenant.py  topic_detector.py  websocket.py
backend/app/models/: __init__.py  agent.py  agent_checkpoint.py  agent_event_log.py  agent_memory_entry.py  agent_relationship_state.py  agent_runtime_state.py  app_settings.py  audit_log.py  conversation.py  (+5 more)
backend/scripts/: migrate_sqlite_to_postgres.py
backend/tests/: conftest.py  test_agent_runtime_domain.py  test_agent_runtime_state_repository.py  test_agent_scheduler_service.py  test_autogen_chat_engine_dispatcher.py  test_autonomous_coordination.py  test_backend_main.py  test_chat_application_langgraph_switch.py  test_config_defaults.py  test_conversation_orchestrator.py  test_dispatcher_debug_history.py  test_dispatcher_planner.py  test_dispatcher_schemas.py  test_dispatcher_service.py  test_langgraph_agent_reply_path.py  test_langgraph_agent_runtime.py  test_langgraph_capability_gating.py  test_provider_api_base_sanitization.py  test_reply_executor.py  test_speak_arbiter.py
(+151 files in other folders)
