[project]
name = "chattable-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autogen-agentchat>=0.6.4",
    "autogen-ext[openai]>=0.6.4",
    "cryptography>=46.0.5",
    "fastapi>=0.135.1",
    "litellm>=1.82.1",
    "psycopg[binary]>=3.2.10",
    "pydantic-settings>=2.13.1",
    "redis>=6.4.0",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
